--- a/advertisement.conf
+++ b/advertisement.conf
@@ -6,5 +6,8 @@
 # MITM: 600
 
 ^https?:\/\/wwads.cn url reject
+^https?:\/\/pagead2.googlesyndication.com url reject
+^https?:\/\securepubads.g.doubleclick.net url reject
+^https?:\/\stats.g.doubleclick.net url reject
 
-hostname = wwads.cn
+hostname = wwads.cn, *googlesyndication.com, *.doubleclick.net
