--- a/advertisement.conf
+++ b/advertisement.conf
@@ -9,5 +9,6 @@
 ^https?:\/\/pagead2.googlesyndication.com url reject
 ^https?:\/\securepubads.g.doubleclick.net url reject
 ^https?:\/\stats.g.doubleclick.net url reject
+^https?:\/\adclick.g.doubleclick.net url reject
 
 hostname = wwads.cn, *googlesyndication.com, *.doubleclick.net
