--- a/advertisement.conf
+++ b/advertisement.conf
@@ -10,5 +10,6 @@
 ^https?:\/\securepubads.g.doubleclick.net url reject
 ^https?:\/\stats.g.doubleclick.net url reject
 ^https?:\/\adclick.g.doubleclick.net url reject
+^https?:\/\/[\s\S]*\/doubleclick\/.* url reject
 
 hostname = wwads.cn, *googlesyndication.com, *.doubleclick.net
