--- a/advertisement.conf
+++ b/advertisement.conf
@@ -6,10 +6,7 @@
 # MITM: 600
 
 ^https?:\/\/wwads.cn url reject
+^https?:\/\/doubleclick.net url reject
 ^https?:\/\/pagead2.googlesyndication.com url reject
-^https?:\/\securepubads.g.doubleclick.net url reject
-^https?:\/\stats.g.doubleclick.net url reject
-^https?:\/\adclick.g.doubleclick.net url reject
-^https?:\/\/[\s\S]*\/doubleclick\/.* url reject
 
 hostname = wwads.cn, *googlesyndication.com, *.doubleclick.net
