--- a/advertisement.conf
+++ b/advertisement.conf
@@ -7,7 +7,7 @@
 
 ^https?:\/\/wwads.cn url reject
 ^https?:\/\/doubleclick.net url reject
-^https?:\/\/[\s\s]*doubleclick\.net url reject
+^https?:\/\/[\s\s]*doubleclick.net url reject
 ^https?:\/\/pagead2.googlesyndication.com url reject
 
 hostname = wwads.cn, *googlesyndication.com, *.doubleclick.net
