--- a/advertisement.conf
+++ b/advertisement.conf
@@ -6,8 +6,6 @@
 # MITM: 600
 
 ^https?:\/\/wwads.cn url reject
-^https?:\/\/doubleclick.net url reject
-^https?:\/\/[\s\s]*doubleclick.net url reject
-^https?:\/\/pagead2.googlesyndication.com url reject
+^https?:\/\/[\s\S]*\.doubleclick.net url reject
 
-hostname = wwads.cn, *googlesyndication.com, *.doubleclick.net
+hostname = wwads.cn, *.doubleclick.net
