--- a/advertisement.conf
+++ b/advertisement.conf
@@ -6,6 +6,6 @@
 # MITM: 600
 
 ^https?:\/\/wwads.cn url reject
-^https?:\/\/[\s\S]*\.doubleclick.net url reject
+^https?:\/\/[\s\S]+\.doubleclick\.net.* url reject
 
 hostname = wwads.cn, *.doubleclick.net
