--- a/advertisement.conf
+++ b/advertisement.conf
@@ -1,11 +1,7 @@
-# NAME: advertisement block
-# AUTHOR: Kok
-# REPO: https://github.com/PureUsername/QuantumultX/
-# UPDATED: 2022-06-01 00:00:00
-# REWRITE: 859
-# MITM: 600
+# Config Name: custom ads
+# Author: Others
+# Github: https://github.com/PureUsername/QuantumultX/
 
 ^https?:\/\/wwads.cn url reject
-^https?:\/\/[\s\S]+\.doubleclick\.net.* url reject
 
-hostname = wwads.cn, *.doubleclick.net
+hostname = wwads.cn
