--- a/custom_ads.conf
+++ b/custom_ads.conf
@@ -3,5 +3,6 @@
 # Github: https://github.com/PureUsername/QuantumultX/
 
 ^https?:\/\/wwads.cn url reject
+^https?:\/\/stargame.com url reject
 
-hostname = wwads.cn
+hostname = wwads.cn, *.stargame.com
