--- a/custom_ads.conf
+++ b/custom_ads.conf
@@ -10,6 +10,7 @@
 ^https?:\/\/ujjainyoga.com url reject
 ^https?:\/\/*.its404.com url reject
 ^https?:\/\/*.hostloc.me url reject
+^https?:\/\/*.hostloc.net url reject
 ^https?:\/\/*.400zi.com url reject
 ^https?:\/\/zhujicankao.com url reject
 ^https?:\/\/*.hostloc.net url reject
@@ -28,4 +29,4 @@
 ^https?:\/\/niul.net url reject
 ^https?:\/\/machbbs.com url reject
 
-hostname = wwads.cn, *.stargame.com, *.cxyzjd.com, 0xzx.com, jingyan.baidu.com, ujjainyoga.com, *.its404.com, *.hostloc.me, *.400zi.com, zhujicankao.com, *.hostloc.net, *.hostphb.com, *.shuzhiduo.com, *.tumbip.com, *.tumgir.com, *.goojie.eu, *.moe.am, *.intozgc.com, *.115cms.com, *.shengqianyunbbs.com, *.zhili123.com, aiznh.com, *.moeloc.com, niul.net, machbbs.com/*
+hostname = wwads.cn, *.stargame.com, *.cxyzjd.com, 0xzx.com, jingyan.baidu.com, ujjainyoga.com, *.its404.com, *.hostloc.me, *.hostloc.net, *.400zi.com, zhujicankao.com, *.hostloc.net, *.hostphb.com, *.shuzhiduo.com, *.tumbip.com, *.tumgir.com, *.goojie.eu, *.moe.am, *.intozgc.com, *.115cms.com, *.shengqianyunbbs.com, *.zhili123.com, aiznh.com, *.moeloc.com, niul.net, machbbs.com/*
