--- a/custom_ads.conf
+++ b/custom_ads.conf
@@ -4,28 +4,5 @@
 
 ^https?:\/\/wwads.cn url reject
 ^https?:\/\/*.stargame.com url reject
-^https?:\/\/*.cxyzjd.com url reject
-^https?:\/\/0xzx.com url reject
-^https?:\/\/jingyan.baidu.com url reject
-^https?:\/\/ujjainyoga.com url reject
-^https?:\/\/*.its404.com url reject
-^https?:\/\/*.hostloc.me url reject
-^https?:\/\/hostloc.net url reject
-^https?:\/\/*.400zi.com url reject
-^https?:\/\/zhujicankao.com url reject
-^https?:\/\/*.hostphb.com url reject
-^https?:\/\/*.shuzhiduo.com url reject
-^https?:\/\/*.tumbip.com url reject
-^https?:\/\/*.tumgir.com url reject
-^https?:\/\/*.goojie.eu url reject
-^https?:\/\/bbs.moe.am url reject
-^https?:\/\/m.intozgc.com url reject
-^https?:\/\/*.115cms.com url reject
-^https?:\/\/*.shengqianyunbbs.com url reject
-^https?:\/\/*.zhili123.com url reject
-^https?:\/\/aiznh.com url reject
-^https?:\/\/*.moeloc.com url reject
-^https?:\/\/niul.net url reject
-^https?:\/\/machbbs.com url reject
 
-hostname = wwads.cn, *.stargame.com, *.cxyzjd.com, 0xzx.com, jingyan.baidu.com, ujjainyoga.com, *.its404.com, *.hostloc.me, hostloc.net, *.400zi.com, zhujicankao.com, *.hostphb.com, *.shuzhiduo.com, *.tumbip.com, *.tumgir.com, *.goojie.eu, *.moe.am, *.intozgc.com, *.115cms.com, *.shengqianyunbbs.com, *.zhili123.com, aiznh.com, *.moeloc.com, niul.net, machbbs.com/*
+hostname = wwads.cn, *.stargame.com
