Update and rename custom_rubbish_website to custom_rubbish_website.conf

--- a/custom_rubbish_website.conf
+++ b/custom_rubbish_website.conf
@@ -16,8 +16,8 @@
 ^https?:\/\/*.tumbip.com url reject
 ^https?:\/\/*.tumgir.com url reject
 ^https?:\/\/*.goojie.eu url reject
-^https?:\/\/bbs.moe.am url reject
-^https?:\/\/m.intozgc.com url reject
+^https?:\/\/*.moe.am url reject
+^https?:\/\/*.intozgc.com url reject
 ^https?:\/\/*.115cms.com url reject
 ^https?:\/\/*.shengqianyunbbs.com url reject
 ^https?:\/\/*.zhili123.com url reject
