--- a/custom_junk_website.conf
+++ b/custom_junk_website.conf
@@ -1,14 +1,16 @@
-# Config Name: custom ads
+# Config Name: custom junk website
 # Author: Others
 # Github: https://github.com/PureUsername/QuantumultX/
 
+^https?:\/\/hostloc.me url reject
+^https?:\/\/*.hostloc.me url reject
+^https?:\/\/hostloc.net url reject
+^https?:\/\/*.hostloc.net url reject
 ^https?:\/\/*.cxyzjd.com url reject
 ^https?:\/\/0xzx.com url reject
 ^https?:\/\/jingyan.baidu.com url reject
 ^https?:\/\/ujjainyoga.com url reject
 ^https?:\/\/*.its404.com url reject
-^https?:\/\/*.hostloc.me url reject
-^https?:\/\/hostloc.net url reject
 ^https?:\/\/*.400zi.com url reject
 ^https?:\/\/zhujicankao.com url reject
 ^https?:\/\/*.hostphb.com url reject
@@ -26,4 +28,4 @@
 ^https?:\/\/niul.net url reject
 ^https?:\/\/machbbs.com url reject
 
-hostname = *.cxyzjd.com, 0xzx.com, jingyan.baidu.com, ujjainyoga.com, *.its404.com, *.hostloc.me, hostloc.net, *.400zi.com, zhujicankao.com, *.hostphb.com, *.shuzhiduo.com, *.tumbip.com, *.tumgir.com, *.goojie.eu, *.moe.am, *.intozgc.com, *.115cms.com, *.shengqianyunbbs.com, *.zhili123.com, aiznh.com, *.moeloc.com, niul.net, machbbs.com/*
+hostname = hostloc.me, *.hostloc.me, hostloc.net, *.hostloc.net, *.cxyzjd.com, 0xzx.com, jingyan.baidu.com, ujjainyoga.com, *.its404.com, *.400zi.com, zhujicankao.com, *.hostphb.com, *.shuzhiduo.com, *.tumbip.com, *.tumgir.com, *.goojie.eu, *.moe.am, *.intozgc.com, *.115cms.com, *.shengqianyunbbs.com, *.zhili123.com, aiznh.com, *.moeloc.com, niul.net, machbbs.com/*
