--- a/custom_junk_website.conf
+++ b/custom_junk_website.conf
@@ -2,30 +2,5 @@
 # Author: Others
 # Github: https://github.com/PureUsername/QuantumultX/
 
-^https?:\/\/hostloc.me url reject
-^https?:\/\/*.hostloc.me url reject
-^https?:\/\/hostloc.net url reject
-^https?:\/\/*.hostloc.net url reject
-^https?:\/\/*.cxyzjd.com url reject
-^https?:\/\/0xzx.com url reject
-^https?:\/\/jingyan.baidu.com url reject
-^https?:\/\/ujjainyoga.com url reject
-^https?:\/\/*.its404.com url reject
-^https?:\/\/*.400zi.com url reject
-^https?:\/\/zhujicankao.com url reject
-^https?:\/\/*.hostphb.com url reject
-^https?:\/\/*.shuzhiduo.com url reject
-^https?:\/\/*.tumbip.com url reject
-^https?:\/\/*.tumgir.com url reject
-^https?:\/\/*.goojie.eu url reject
-^https?:\/\/*.moe.am url reject
-^https?:\/\/*.intozgc.com url reject
-^https?:\/\/*.115cms.com url reject
-^https?:\/\/*.shengqianyunbbs.com url reject
-^https?:\/\/*.zhili123.com url reject
-^https?:\/\/aiznh.com url reject
-^https?:\/\/*.moeloc.com url reject
-^https?:\/\/niul.net url reject
-^https?:\/\/machbbs.com url reject
-
-hostname = hostloc.me, *.hostloc.me, hostloc.net, *.hostloc.net, *.cxyzjd.com, 0xzx.com, jingyan.baidu.com, ujjainyoga.com, *.its404.com, *.400zi.com, zhujicankao.com, *.hostphb.com, *.shuzhiduo.com, *.tumbip.com, *.tumgir.com, *.goojie.eu, *.moe.am, *.intozgc.com, *.115cms.com, *.shengqianyunbbs.com, *.zhili123.com, aiznh.com, *.moeloc.com, niul.net, machbbs.com/*
+DOMAIN-SUFFIX,hostloc.me
+DOMAIN-SUFFIX,hostloc.net
