--- a/custom_junk_website.conf
+++ b/custom_junk_website.conf
@@ -4,5 +4,26 @@
 
 ^https?:\/\/[\s\S]*\.hostloc\.me url reject
 ^https?:\/\/[\s\S]*\.hostloc\.net url reject
+^https?:\/\/[\s\S]*\.cxyzjd\.com url reject
+^https?:\/\/[\s\S]*\.0xzx\.com url reject
+^https?:\/\/[\s\S]*\.jingyan.baidu\.com url reject
+^https?:\/\/[\s\S]*\.ujjainyoga\.com url reject
+^https?:\/\/[\s\S]*\.its404\.com url reject
+^https?:\/\/[\s\S]*\.400zi\.com url reject
+^https?:\/\/[\s\S]*\.zhujicankao\.com url reject
+^https?:\/\/[\s\S]*\.hostphb\.com url reject
+^https?:\/\/[\s\S]*\.shuzhiduo\.com url reject
+^https?:\/\/[\s\S]*\.tumbip\.com url reject
+^https?:\/\/[\s\S]*\.tumgir\.com url reject
+^https?:\/\/[\s\S]*\.goojie\.eu url reject
+^https?:\/\/[\s\S]*\.moe\.am url reject
+^https?:\/\/[\s\S]*\.intozgc\.com url reject
+^https?:\/\/[\s\S]*\.115cms\.com url reject
+^https?:\/\/[\s\S]*\.shengqianyunbbs\.com url reject
+^https?:\/\/[\s\S]*\.zhili123\.com url reject
+^https?:\/\/[\s\S]*\.aiznh\.com url reject
+^https?:\/\/[\s\S]*\.moeloc\.com url reject
+^https?:\/\/[\s\S]*\.niul\.net url reject
+^https?:\/\/[\s\S]*\.machbbs\.com url reject
 
-hostname = wwads.cn, *.stargame.com, *.hostloc.me, *.hostloc.net
+hostname = *.hostloc.me, *.hostloc.net, *.cxyzjd.com, *.0xzx.com, *.jingyan.baidu.com, *.ujjainyoga.com, *.its404.com, *.400zi.com, *.zhujicankao.com, *.hostphb.com, *.shuzhiduo.com, *.tumbip.com, *.tumgir.com, *.goojie.eu, *.moe.am, *.intozgc.com, *.115cms.com, *.shengqianyunbbs.com, *.zhili123.com, *.aiznh.com, *.moeloc.com, *.niul.net, *.machbbs.com
