--- a/custom_junk_website.conf
+++ b/custom_junk_website.conf
@@ -25,5 +25,190 @@
 ^https?:\/\/[\s\S]*\.moeloc\.com url reject
 ^https?:\/\/[\s\S]*\.niul\.net url reject
 ^https?:\/\/[\s\S]*\.machbbs\.com url reject
+^https?:\/\/[\s\S]*\.17gouwuba.com url reject
+^https?:\/\/[\s\S]*\.186078.com url reject
+^https?:\/\/[\s\S]*\.189key.com url reject
+^https?:\/\/[\s\S]*\.189zj.cn url reject
+^https?:\/\/[\s\S]*\.285680.com url reject
+^https?:\/\/[\s\S]*\.3721zh.com url reject
+^https?:\/\/[\s\S]*\.4336wang.cn url reject
+^https?:\/\/[\s\S]*\.51chumoping.com url reject
+^https?:\/\/[\s\S]*\.51mld.cn url reject
+^https?:\/\/[\s\S]*\.51mypc.cn url reject
+^https?:\/\/[\s\S]*\.58mingri.cn url reject
+^https?:\/\/[\s\S]*\.58mingtian.cn url reject
+^https?:\/\/[\s\S]*\.5vl58stm.com url reject
+^https?:\/\/[\s\S]*\.6d63d3.com url reject
+^https?:\/\/[\s\S]*\.7gg.cc url reject
+^https?:\/\/[\s\S]*\.91veg.com url reject
+^https?:\/\/[\s\S]*\.9s6q.cn url reject
+^https?:\/\/[\s\S]*\.adsame.com url reject
+^https?:\/\/[\s\S]*\.akuai.top url reject
+^https?:\/\/[\s\S]*\.atplay.cn url reject
+^https?:\/\/[\s\S]*\.baiwanchuangyi.com url reject
+^https?:\/\/[\s\S]*\.beerto.cn url reject
+^https?:\/\/[\s\S]*\.beilamusi.com url reject
+^https?:\/\/[\s\S]*\.benshiw.net url reject
+^https?:\/\/[\s\S]*\.bianxianmao.com url reject
+^https?:\/\/[\s\S]*\.bkyhq.cn url reject
+^https?:\/\/[\s\S]*\.bryonypie.com url reject
+^https?:\/\/[\s\S]*\.cishantao.com url reject
+^https?:\/\/[\s\S]*\.cszlks.com url reject
+^https?:\/\/[\s\S]*\.cudaojia.com url reject
+^https?:\/\/[\s\S]*\.dafapromo.com url reject
+^https?:\/\/[\s\S]*\.daitdai.com url reject
+^https?:\/\/[\s\S]*\.dsaeerf.com url reject
+^https?:\/\/[\s\S]*\.dugesheying.com url reject
+^https?:\/\/[\s\S]*\.dv8c1t.cn url reject
+^https?:\/\/[\s\S]*\.echatu.com url reject
+^https?:\/\/[\s\S]*\.erdoscs.com url reject
+^https?:\/\/[\s\S]*\.fan-yong.com url reject
+^https?:\/\/[\s\S]*\.feih.com url reject.cn url reject
+^https?:\/\/[\s\S]*\.fjlqqc.com url reject
+^https?:\/\/[\s\S]*\.fkku194.com url reject
+^https?:\/\/[\s\S]*\.freedrive.cn url reject
+^https?:\/\/[\s\S]*\.gclick.cn url reject
+^https?:\/\/[\s\S]*\.goufanli100.com url reject
+^https?:\/\/[\s\S]*\.goupaoerdai.com url reject
+^https?:\/\/[\s\S]*\.gouwubang.com url reject
+^https?:\/\/[\s\S]*\.gscxs.cn url reject
+^https?:\/\/[\s\S]*\.gzxnlk.com url reject
+^https?:\/\/[\s\S]*\.haoshengtoys.com url reject
+^https?:\/\/[\s\S]*\.hbssjd.cn url reject
+^https?:\/\/[\s\S]*\.hyunke.com url reject
+^https?:\/\/[\s\S]*\.ichaosheng.com url reject
+^https?:\/\/[\s\S]*\.ishop789.com url reject
+^https?:\/\/[\s\S]*\.jdkic.com url reject
+^https?:\/\/[\s\S]*\.jiubuhua.com url reject
+^https?:\/\/[\s\S]*\.jsncke.com url reject
+^https?:\/\/[\s\S]*\.junkucm.com url reject
+^https?:\/\/[\s\S]*\.jwg365.cn url reject
+^https?:\/\/[\s\S]*\.kawo77.com url reject
+^https?:\/\/[\s\S]*\.kualianyingxiao.cn url reject
+^https?:\/\/[\s\S]*\.kumihua.com url reject
+^https?:\/\/[\s\S]*\.ltheanine.cn url reject
+^https?:\/\/[\s\S]*\.lvehaisen.com url reject
+^https?:\/\/[\s\S]*\.maipinshangmao.com url reject
+^https?:\/\/[\s\S]*\.minisplat.cn url reject
+^https?:\/\/[\s\S]*\.mkitgfs.com url reject
+^https?:\/\/[\s\S]*\.mlnbike.com url reject
+^https?:\/\/[\s\S]*\.mobjump.com url reject
+^https?:\/\/[\s\S]*\.nbkbgd.cn url reject
+^https?:\/\/[\s\S]*\.newapi.com url reject
+^https?:\/\/[\s\S]*\.pinzhitmall.com url reject
+^https?:\/\/[\s\S]*\.poppyta.com url reject
+^https?:\/\/[\s\S]*\.qianchuanghr.com url reject
+^https?:\/\/[\s\S]*\.qichexin.com url reject
+^https?:\/\/[\s\S]*\.qinchugudao.com url reject
+^https?:\/\/[\s\S]*\.quanliyouxi.cn url reject
+^https?:\/\/[\s\S]*\.qutaobi.com url reject
+^https?:\/\/[\s\S]*\.ry51w.cn url reject
+^https?:\/\/[\s\S]*\.sg536.cn url reject
+^https?:\/\/[\s\S]*\.sifubo.cn url reject
+^https?:\/\/[\s\S]*\.sifuce.cn url reject
+^https?:\/\/[\s\S]*\.sifuda.cn url reject
+^https?:\/\/[\s\S]*\.sifufu.cn url reject
+^https?:\/\/[\s\S]*\.sifuge.cn url reject
+^https?:\/\/[\s\S]*\.sifugu.cn url reject
+^https?:\/\/[\s\S]*\.sifuhe.cn url reject
+^https?:\/\/[\s\S]*\.sifuhu.cn url reject
+^https?:\/\/[\s\S]*\.sifuji.cn url reject
+^https?:\/\/[\s\S]*\.sifuka.cn url reject
+^https?:\/\/[\s\S]*\.smgru.net url reject
+^https?:\/\/[\s\S]*\.taoggou.com url reject
+^https?:\/\/[\s\S]*\.tcxshop.com url reject
+^https?:\/\/[\s\S]*\.tjqonline.cn url reject
+^https?:\/\/[\s\S]*\.topitme.com url reject
+^https?:\/\/[\s\S]*\.tt114.net url reject
+^https?:\/\/[\s\S]*\.tt3sm4.cn url reject
+^https?:\/\/[\s\S]*\.tuia.cn url reject
+^https?:\/\/[\s\S]*\.tuipenguin.com url reject
+^https?:\/\/[\s\S]*\.tuitiger.com url reject
+^https?:\/\/[\s\S]*\.urlaw.cn url reject
+^https?:\/\/[\s\S]*\.urlet.cn url reject
+^https?:\/\/[\s\S]*\.websd8.com url reject
+^https?:\/\/[\s\S]*\.wsgblw.com url reject
+^https?:\/\/[\s\S]*\.wx16999.com url reject
+^https?:\/\/[\s\S]*\.xchmai.com url reject
+^https?:\/\/[\s\S]*\.xiaohuau.xyz url reject
+^https?:\/\/[\s\S]*\.ygyzx.cn url reject
+^https?:\/\/[\s\S]*\.yinmong.com url reject
+^https?:\/\/[\s\S]*\.yitaopt.com url reject
+^https?:\/\/[\s\S]*\.yjqiqi.com url reject
+^https?:\/\/[\s\S]*\.yukhj.com url reject
+^https?:\/\/[\s\S]*\.zhaozecheng.cn url reject
+^https?:\/\/[\s\S]*\.zhenxinet.com url reject
+^https?:\/\/[\s\S]*\.zlne800.com url reject
+^https?:\/\/[\s\S]*\.zmlled.cn url reject
+^https?:\/\/[\s\S]*\.zunmi.cn url reject
+^https?:\/\/[\s\S]*\.zzd6.com url reject
+^https?:\/\/[\s\S]*\.kuaizip.com url reject
+^https?:\/\/[\s\S]*\.mackeeper.com url reject
+^https?:\/\/[\s\S]*\.zryydi.com url reject
+^https?:\/\/[\s\S]*\.flash.cn url reject
+^https?:\/\/[\s\S]*\.4009997658.com url reject
+^https?:\/\/[\s\S]*\.abbyychina.com url reject
+^https?:\/\/[\s\S]*\.alienskins.cn url reject
+^https?:\/\/[\s\S]*\.anydeskchina.cn url reject
+^https?:\/\/[\s\S]*\.bartender.cc url reject
+^https?:\/\/[\s\S]*\.betterzip.net url reject
+^https?:\/\/[\s\S]*\.betterzipcn.com url reject
+^https?:\/\/[\s\S]*\.beyondcompare.cc url reject
+^https?:\/\/[\s\S]*\.bingdianhuanyuan.cn url reject
+^https?:\/\/[\s\S]*\.chemdraw.com.cn url reject
+^https?:\/\/[\s\S]*\.cjmakeding.com url reject
+^https?:\/\/[\s\S]*\.cjmkt.com url reject
+^https?:\/\/[\s\S]*\.codesoftchina.com url reject
+^https?:\/\/[\s\S]*\.coreldrawchina.com url reject
+^https?:\/\/[\s\S]*\.crossoverchina.com url reject
+^https?:\/\/[\s\S]*\.dongmansoft.com url reject
+^https?:\/\/[\s\S]*\.earmasterchina.cn url reject
+^https?:\/\/[\s\S]*\.easyrecoverychina.com url reject
+^https?:\/\/[\s\S]*\.ediuschina.com url reject
+^https?:\/\/[\s\S]*\.flstudiochina.com url reject
+^https?:\/\/[\s\S]*\.folxchina.cn url reject
+^https?:\/\/[\s\S]*\.formysql.com url reject
+^https?:\/\/[\s\S]*\.guitarpro.cc url reject
+^https?:\/\/[\s\S]*\.huishenghuiying.com.cn url reject
+^https?:\/\/[\s\S]*\.hypeapp.cn url reject
+^https?:\/\/[\s\S]*\.hypersnap.net url reject
+^https?:\/\/[\s\S]*\.iconworkshop.cn url reject
+^https?:\/\/[\s\S]*\.idmchina.net url reject
+^https?:\/\/[\s\S]*\.imazingchina.com url reject
+^https?:\/\/[\s\S]*\.imindmap.cc url reject
+^https?:\/\/[\s\S]*\.jihehuaban.com.cn url reject
+^https?:\/\/[\s\S]*\.keyshot.cc url reject
+^https?:\/\/[\s\S]*\.kingdeecn.cn url reject
+^https?:\/\/[\s\S]*\.logoshejishi.com url reject
+^https?:\/\/[\s\S]*\.luping.net.cn url reject
+^https?:\/\/[\s\S]*\.mairuan.cn url reject
+^https?:\/\/[\s\S]*\.mairuan.com url reject
+^https?:\/\/[\s\S]*\.mairuan.com.cn url reject
+^https?:\/\/[\s\S]*\.mairuan.net url reject
+^https?:\/\/[\s\S]*\.mairuanwang.com url reject
+^https?:\/\/[\s\S]*\.makeding.com url reject
+^https?:\/\/[\s\S]*\.mathtype.cn url reject
+^https?:\/\/[\s\S]*\.mindmanager.cc url reject
+^https?:\/\/[\s\S]*\.mindmanager.cn url reject
+^https?:\/\/[\s\S]*\.mindmapper.cc url reject
+^https?:\/\/[\s\S]*\.mycleanmymac.com url reject
+^https?:\/\/[\s\S]*\.nicelabel.cc url reject
+^https?:\/\/[\s\S]*\.ntfsformac.cc url reject
+^https?:\/\/[\s\S]*\.ntfsformac.cn url reject
+^https?:\/\/[\s\S]*\.officesoftcn.com url reject
+^https?:\/\/[\s\S]*\.overturechina.com url reject
+^https?:\/\/[\s\S]*\.passwordrecovery.cn url reject
+^https?:\/\/[\s\S]*\.pdfexpert.cc url reject
+^https?:\/\/[\s\S]*\.photozoomchina.com url reject
+^https?:\/\/[\s\S]*\.shankejingling.com url reject
+^https?:\/\/[\s\S]*\.ultraiso.net url reject
+^https?:\/\/[\s\S]*\.vegaschina.cn url reject
+^https?:\/\/[\s\S]*\.xitongqingli.com url reject
+^https?:\/\/[\s\S]*\.xmindchina.net url reject
+^https?:\/\/[\s\S]*\.xshellcn.com url reject
+^https?:\/\/[\s\S]*\.yihuifu.cn url reject
+^https?:\/\/[\s\S]*\.yuanchengxiezuo.com url reject
+^https?:\/\/[\s\S]*\.zbrushcn.com url reject
+^https?:\/\/[\s\S]*\.zhzzx.com url reject
 
-hostname = *.hostloc.me, *.hostloc.net, *.cxyzjd.com, *.0xzx.com, *.jingyan.baidu.com, *.ujjainyoga.com, *.its404.com, *.400zi.com, *.zhujicankao.com, *.hostphb.com, *.shuzhiduo.com, *.tumbip.com, *.tumgir.com, *.goojie.eu, *.moe.am, *.intozgc.com, *.115cms.com, *.shengqianyunbbs.com, *.zhili123.com, *.aiznh.com, *.moeloc.com, *.niul.net, *.machbbs.com
+hostname = *.hostloc.me, *.hostloc.net, *.cxyzjd.com, *.0xzx.com, *.jingyan.baidu.com, *.ujjainyoga.com, *.its404.com, *.400zi.com, *.zhujicankao.com, *.hostphb.com, *.shuzhiduo.com, *.tumbip.com, *.tumgir.com, *.goojie.eu, *.moe.am, *.intozgc.com, *.115cms.com, *.shengqianyunbbs.com, *.zhili123.com, *.aiznh.com, *.moeloc.com, *.niul.net, *.machbbs.com, *.17gouwuba.com, *.186078.com, *.189key.com, *.189zj.cn, *.285680.com, *.3721zh.com, *.4336wang.cn, *.51chumoping.com, *.51mld.cn, *.51mypc.cn, *.58mingri.cn, *.58mingtian.cn, *.5vl58stm.com, *.6d63d3.com, *.7gg.cc, *.91veg.com, *.9s6q.cn, *.adsame.com, *.akuai.top, *.atplay.cn, *.baiwanchuangyi.com, *.beerto.cn, *.beilamusi.com, *.benshiw.net, *.bianxianmao.com, *.bkyhq.cn, *.bryonypie.com, *.cishantao.com, *.cszlks.com, *.cudaojia.com, *.dafapromo.com, *.daitdai.com, *.dsaeerf.com, *.dugesheying.com, *.dv8c1t.cn, *.echatu.com, *.erdoscs.com, *.fan-yong.com, *.feih.com.cn, *.fjlqqc.com, *.fkku194.com, *.freedrive.cn, *.gclick.cn, *.goufanli100.com, *.goupaoerdai.com, *.gouwubang.com, *.gscxs.cn, *.gzxnlk.com, *.haoshengtoys.com, *.hbssjd.cn, *.hyunke.com, *.ichaosheng.com, *.ishop789.com, *.jdkic.com, *.jiubuhua.com, *.jsncke.com, *.junkucm.com, *.jwg365.cn, *.kawo77.com, *.kualianyingxiao.cn, *.kumihua.com, *.ltheanine.cn, *.lvehaisen.com, *.maipinshangmao.com, *.minisplat.cn, *.mkitgfs.com, *.mlnbike.com, *.mobjump.com, *.nbkbgd.cn, *.newapi.com, *.pinzhitmall.com, *.poppyta.com, *.qianchuanghr.com, *.qichexin.com, *.qinchugudao.com, *.quanliyouxi.cn, *.qutaobi.com, *.ry51w.cn, *.sg536.cn, *.sifubo.cn, *.sifuce.cn, *.sifuda.cn, *.sifufu.cn, *.sifuge.cn, *.sifugu.cn, *.sifuhe.cn, *.sifuhu.cn, *.sifuji.cn, *.sifuka.cn, *.smgru.net, *.taoggou.com, *.tcxshop.com, *.tjqonline.cn, *.topitme.com, *.tt114.net, *.tt3sm4.cn, *.tuia.cn, *.tuipenguin.com, *.tuitiger.com, *.urlaw.cn, *.urlet.cn, *.websd8.com, *.wsgblw.com, *.wx16999.com, *.xchmai.com, *.xiaohuau.xyz, *.ygyzx.cn, *.yinmong.com, *.yitaopt.com, *.yjqiqi.com, *.yukhj.com, *.zhaozecheng.cn, *.zhenxinet.com, *.zlne800.com, *.zmlled.cn, *.zunmi.cn, *.zzd6.com, *.kuaizip.com, *.mackeeper.com, *.zryydi.com, *.flash.cn, *.4009997658.com, *.abbyychina.com, *.alienskins.cn, *.anydeskchina.cn, *.bartender.cc, *.betterzip.net, *.betterzipcn.com, *.beyondcompare.cc, *.bingdianhuanyuan.cn, *.chemdraw.com.cn, *.cjmakeding.com, *.cjmkt.com, *.codesoftchina.com, *.coreldrawchina.com, *.crossoverchina.com, *.dongmansoft.com, *.earmasterchina.cn, *.easyrecoverychina.com, *.ediuschina.com, *.flstudiochina.com, *.folxchina.cn, *.formysql.com, *.guitarpro.cc, *.huishenghuiying.com.cn, *.hypeapp.cn, *.hypersnap.net, *.iconworkshop.cn, *.idmchina.net, *.imazingchina.com, *.imindmap.cc, *.jihehuaban.com.cn, *.keyshot.cc, *.kingdeecn.cn, *.logoshejishi.com, *.luping.net.cn, *.mairuan.cn, *.mairuan.com, *.mairuan.com.cn, *.mairuan.net, *.mairuanwang.com, *.makeding.com, *.mathtype.cn, *.mindmanager.cc, *.mindmanager.cn, *.mindmapper.cc, *.mycleanmymac.com, *.nicelabel.cc, *.ntfsformac.cc, *.ntfsformac.cn, *.officesoftcn.com, *.overturechina.com, *.passwordrecovery.cn, *.pdfexpert.cc, *.photozoomchina.com, *.shankejingling.com, *.ultraiso.net, *.vegaschina.cn, *.xitongqingli.com, *.xmindchina.net, *.xshellcn.com, *.yihuifu.cn, *.yuanchengxiezuo.com, *.zbrushcn.com, *.zhzzx.com
