--- a/custom_junk_website.conf
+++ b/custom_junk_website.conf
@@ -63,7 +63,7 @@
 ^https?:\/\/[\s\S]*\.echatu.com url reject
 ^https?:\/\/[\s\S]*\.erdoscs.com url reject
 ^https?:\/\/[\s\S]*\.fan-yong.com url reject
-^https?:\/\/[\s\S]*\.feih.com url reject.cn url reject
+^https?:\/\/[\s\S]*\.feih.com.cn url reject
 ^https?:\/\/[\s\S]*\.fjlqqc.com url reject
 ^https?:\/\/[\s\S]*\.fkku194.com url reject
 ^https?:\/\/[\s\S]*\.freedrive.cn url reject
