--- a/custom_ads.conf
+++ b/custom_ads.conf
@@ -1,5 +1,5 @@
 # Config Name: custom ads
-# Author: Others
+# Author: Kok
 # Github: https://github.com/PureUsername/QuantumultX/
 
 ^https?:\/\/wwads.cn url reject
