--- a/custom_ads.conf
+++ b/custom_ads.conf
@@ -2,7 +2,7 @@
 # Author: Kok
 # Github: https://github.com/PureUsername/QuantumultX/
 
-^https?:\/\/wwads.cn url reject
-^https?:\/\/*.stargame.com url reject
+^https?:\/\/[\s\S]*\.wwads.cn url reject
+^https?:\/\/[\s\S]*\.stargame.com url reject
 
-hostname = wwads.cn, *.stargame.com
+hostname = *.wwads.cn, *.stargame.com
