Update and rename custom_junk_website.conf to custom_blacklist.conf

--- a/custom_blacklist.conf
+++ b/custom_blacklist.conf
@@ -1,4 +1,4 @@
-# Config Name: custom junk website
+# Config Name: custom blacklist
 # Author: Kok
 # Github: https://github.com/PureUsername/QuantumultX/
 
