--- a/custom_whitelist.conf
+++ b/custom_whitelist.conf
@@ -12,3 +12,5 @@
 ^https?:\/\/[\s\S]*\.qq\.com url direct
 ^https?:\/\/[\s\S]*\.hotmail\.com url direct
 ^https?:\/\/[\s\S]*\.icloud\.com url direct
+
+hostname = *.grab.com, *.grabtaxi.com, *.amazonaws.com, *.offce365.com, *.app-measurement.com, *.whatsapp.net, *.wechat.com, *.qq.com, *.hotmail.com, *.icloud.com
