--- a/custom_ads.conf
+++ b/custom_ads.conf
@@ -4,5 +4,8 @@
 
 ^https?:\/\/[\s\S]*\.wwads.cn url reject
 ^https?:\/\/[\s\S]*\.stargame.com url reject
+^https?:\/\/[\s\S]*\.vungle.com url reject
+^https?:\/\/[\s\S]*\.liftoff.io url reject
+^https?:\/\/[\s\S]*\.liftoff-creatives.io url reject
 
-hostname = *.wwads.cn, *.stargame.com
+hostname = *.wwads.cn, *.stargame.com, *.vungle.com, *.liftoff.io, *.liftoff-creatives.io
