--- a/custom_ads.conf
+++ b/custom_ads.conf
@@ -7,5 +7,10 @@
 ^https?:\/\/[\s\S]*\.vungle.com url reject
 ^https?:\/\/[\s\S]*\.liftoff.io url reject
 ^https?:\/\/[\s\S]*\.liftoff-creatives.io url reject
+^https?:\/\/[\s\S]*\.adsmoloco.com url reject
+^https?:\/\/[\s\S]*\.meson.ai url reject
+^https?:\/\/[\s\S]*\.inmobi.com url reject
+^https?:\/\/[\s\S]*\.inmobicdn.net url reject
 
-hostname = *.wwads.cn, *.stargame.com, *.vungle.com, *.liftoff.io, *.liftoff-creatives.io
+
+hostname = *.wwads.cn, *.stargame.com, *.vungle.com, *.liftoff.io, *.liftoff-creatives.io, *.adsmoloco.com, *.meson.ai, *.inmobi.com, *.inmobicdn.net
