--- a/custom_ads.conf
+++ b/custom_ads.conf
@@ -11,6 +11,7 @@
 ^https?:\/\/[\s\S]*\.meson.ai url reject
 ^https?:\/\/[\s\S]*\.inmobi.com url reject
 ^https?:\/\/[\s\S]*\.inmobicdn.net url reject
+^https?:\/\/[\s\S]*\.archive-digger.com url reject
 
 
-hostname = *.wwads.cn, *.stargame.com, *.vungle.com, *.liftoff.io, *.liftoff-creatives.io, *.adsmoloco.com, *.meson.ai, *.inmobi.com, *.inmobicdn.net
+hostname = *.wwads.cn, *.stargame.com, *.vungle.com, *.liftoff.io, *.liftoff-creatives.io, *.adsmoloco.com, *.meson.ai, *.inmobi.com, *.inmobicdn.net, *.archive-digger.com
