--- a/custom_ads.conf
+++ b/custom_ads.conf
@@ -12,6 +12,6 @@
 ^https?:\/\/[\s\S]*\.inmobi.com url reject
 ^https?:\/\/[\s\S]*\.inmobicdn.net url reject
 ^https?:\/\/[\s\S]*\.archive-digger.com url reject
+^https?:\/\/[\s\S]*\.taboola.com url reject
 
-
-hostname = *.wwads.cn, *.stargame.com, *.vungle.com, *.liftoff.io, *.liftoff-creatives.io, *.adsmoloco.com, *.meson.ai, *.inmobi.com, *.inmobicdn.net, *.archive-digger.com
+hostname = *.wwads.cn, *.stargame.com, *.vungle.com, *.liftoff.io, *.liftoff-creatives.io, *.adsmoloco.com, *.meson.ai, *.inmobi.com, *.inmobicdn.net, *.archive-digger.com, *.taboola.com
