--- a/custom_ads.conf
+++ b/custom_ads.conf
@@ -13,5 +13,6 @@
 ^https?:\/\/[\s\S]*\.inmobicdn.net url reject
 ^https?:\/\/[\s\S]*\.archive-digger.com url reject
 ^https?:\/\/[\s\S]*\.taboola.com url reject
+^http?:\/\/[\s\S]*\.taboola.com url reject
 
 hostname = *.wwads.cn, *.stargame.com, *.vungle.com, *.liftoff.io, *.liftoff-creatives.io, *.adsmoloco.com, *.meson.ai, *.inmobi.com, *.inmobicdn.net, *.archive-digger.com, *.taboola.com
